[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/2D/Atlas/UI/Delete.tres" type="Texture" id=1]
[ext_resource path="res://Script/Class/AnimationButtonClass.gd" type="Script" id=3]
[ext_resource path="res://Assets/2D/Atlas/UI/Add.tres" type="Texture" id=4]
[ext_resource path="res://Script/ScriptGridEx/Nodes/Multiple_Instances.gd" type="Script" id=5]

[node name="MultipleInstances" type="GraphNode"]
margin_right = 288.0
margin_bottom = 136.0
rect_min_size = Vector2( 220, 136 )
mouse_filter = 1
title = "MultipleInstances"
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 5 )

[node name="Panel" type="PanelContainer" parent="."]
margin_left = 10.0
margin_top = 21.0
margin_right = 284.0
margin_bottom = 129.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Vbox" type="VBoxContainer" parent="Panel"]
margin_left = 3.0
margin_top = 5.0
margin_right = 271.0
margin_bottom = 101.0
size_flags_horizontal = 3
alignment = 1

[node name="Buttons" type="HBoxContainer" parent="Panel/Vbox"]
margin_top = 28.0
margin_right = 268.0
margin_bottom = 68.0
size_flags_horizontal = 3

[node name="New instance" type="Button" parent="Panel/Vbox/Buttons"]
margin_right = 162.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "New instance"
icon = ExtResource( 4 )
script = ExtResource( 3 )

[node name="Remove" type="Button" parent="Panel/Vbox/Buttons"]
margin_left = 166.0
margin_right = 268.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Remove"
icon = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Points" type="Node" parent="."]

[connection signal="change_is_output" from="." to="." method="_on_MultipleInstances_change_is_output"]
[connection signal="disconnect_from" from="." to="." method="_on_MultipleInstances_disconnect_from"]
[connection signal="from_value" from="." to="." method="_on_MultipleInstances_from_value"]
[connection signal="pressed" from="Panel/Vbox/Buttons/New instance" to="." method="_on_New_instance_pressed"]
[connection signal="pressed" from="Panel/Vbox/Buttons/Remove" to="." method="_on_Remove_pressed"]
